install/onprem/tiberowebstudio/tibero-studio.yaml
apiVersion: v1
kind: Pod
metatdata:
  labels:
    app: tibero-sd
  name: tibero-sd
spec:
  containers:
    - env:
      - name: hostname
        value: "tibero"
      image: 192.168.179.31:5000/tbstudio_web:20220822_v3
      name: tibero-con
      securityContext:
        privileged: true
      ports:
      - containerPort: 8000
        name: tbsd-lsnr
        protocol: TCP
      - containerPort: 3000
        name: tbsd-proxy
        protocol: TCP
      resources:
        limits:
          cpu: "4"
          memory: 8Gi
        requests:
          cpu: "4"
          memory: 8Gi
