install/onprem/tiberowebstudio/service-tbstudio.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-tibero-sd
spec:
  type: NodePort
  selector:
    app: tibero-sd
  ports:
    - name: tbsd-lsnr
      nodePort: 30835
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: tbsd-proxy
      nodePort: 30879
      port: 3000
      protocol: TCP
      targetProt: 3000
